# axum_admin

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: route.rs
config/: config.toml.sample
db/src/system/entities/: mod.rs  prelude.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_role_dept.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_post.rs  test_data_scope.rs
db/src/test/entities/: test_data_scope.rs
middleware-fn/: Cargo.toml
migration/src/: lib.rs  main.rs
migration/src/migrations/: mod.rs
service/: Cargo.toml
service/src/service_utils/: jwt.rs
service/src/system/: server_info.rs
starter/: Cargo.toml
starter/src/: lib.rs
