[workspace]
members = [
  "bin",
  "api",
  "service",
  "middleware-fn",
  "utils",
  "configs",
  "db",
  "migration",
]
resolver = "2"


[workspace.package]
authors = ["lingdu <waong2005@126.com>"]
edition = "2021"
homepage = "https://314.iu1314.top"
license = "Apache-2.0"
publish = false
repository = ""
version = "0.1.0"
default-run = "axum-admin"

[workspace.dependencies]
# axum 
axum = "0.8.0-alpha.1"
axum-extra = "0.10.0-alpha.1"
# axum-server = "0"
hyper = "1.4.1"
hyper-util = "0.1.9"
http-body-util = "0.1.2"
rustls-pemfile = "1.0.4"
mime = "0.3.17"
tower = "0.5.1"
tower-service = "0.3.3"
tower-http = "0.6.1"
#
anyhow = "1.0.89"
bytes = "1.7.2"
futures = "0.3.31"

async-stream = "0.3.6"
async-trait = "0.1.83"
chrono = "0.4.38"
headers = "0.4.0"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
# 用于生成可排序的唯一id
scru128 = "3.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
# tokio
tokio = "1.40.0"
tokio-stream = "0.1.16"
tokio-rustls = "0.24.1"
#  "tracing"
toml = "0.8.19"
# tracing
time = "0.3.36"
tracing = "0.1.40"
tracing-appender = "0.2.3"
# tracing-log = "0.1"
tracing-subscriber = "0.3.18"

# 计划任务
delay_timer = "0.11.6"
reqwest = "0.12.8"
user-agent-parser = "0.3.6"

#  随机数
md5 = "0.7.0"
rand = "0.9.0-alpha.2"
# 系统信息
sysinfo = "0.32.0"
# 验证码
captcha_rust = "0.1.3"
# skyTable  可选依赖
skytable = "0.7.5"
# swagger openApi
# utoipa = "2"
# utoipa-swagger-ui = "2"

futures-util = "0.3.31"

# sea-orm
#sea-orm = "1.1.0-rc.3"
sea-orm = "0.12.15"




[profile.release]
codegen-units = 1 
debug = false 
lto = true 
opt-level = "z" # Optimize for size.
panic = 'abort' 
# strip = "symbols" # none(false) debuginfo symbols(true).
